--- a/src/index.html
+++ b/src/index.html
@@ -258,6 +258,7 @@
 
    <div id="teachers-grid">
    </div>
+   <button id="load-more-btn" class="add-teacher-button" onclick="addMoreUsers(10)">Load 10 more users</button>
 
 </section>
 
@@ -291,46 +292,7 @@
    <div class="carousel-wrapper">
       <button class="carousel-arrow left-arrow" onclick="shiftLeft()">&lt;</button>
       <div id="favourites-carousel">
-         <div class="teacher-card-bottom">
-            <div class="teacher-photo">
-               <img src="images/photo1.jpg" alt="Teacher photo" class="teacher-photo-inside">
-            </div>
-            <p class="teacher-name">Ihor</p>
-            <p class="teacher-name">Tkachuk</p>
-            <p class="teacher-nation">Ukraine</p>
-         </div>
-         <div class="teacher-card-bottom">
-            <div class="teacher-photo">
-               <img src="images/photo44.jpg" alt="A.M.  " class="teacher-photo-inside">
-            </div>
-            <p class="teacher-name">Anna</p>
-            <p class="teacher-name">Muzychuk</p>
-            <p class="teacher-nation">Belarus</p>
-         </div>
-         <div class="teacher-card-bottom">
-            <div class="teacher-photo">
-               <img src="images/photo4.jpg" alt="A.M.  " class="teacher-photo-inside">
-            </div>
-            <p class="teacher-name">John</p>
-            <p class="teacher-name">Burke</p>
-            <p class="teacher-nation">Belgium</p>
-         </div>
-         <div class="teacher-card-bottom">
-            <div class="teacher-photo">
-               <img src="images/photo5.jpg" alt="A.M.  " class="teacher-photo-inside">
-            </div>
-            <p class="teacher-name">Ari</p>
-            <p class="teacher-name">Tang</p>
-            <p class="teacher-nation">China</p>
-         </div>
-         <div class="teacher-card-bottom">
-            <div class="teacher-photo">
-               <img src="images/photo3.jpg" alt="A.M.  " class="teacher-photo-inside">
-            </div>
-            <p class="teacher-name">Floor</p>
-            <p class="teacher-name">Jansen</p>
-            <p class="teacher-nation">Denmark</p>
-         </div>
+
       </div>
       <button class="carousel-arrow right-arrow" onclick="shiftRight()">&gt;</button>
    </div>
